--- a/DisableTransitiveProjectReferencesTest/DisableTransitiveProjectReferencesTest.csproj
+++ b/DisableTransitiveProjectReferencesTest/DisableTransitiveProjectReferencesTest.csproj
@@ -7,9 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="appsettings.json" />
-  </ItemGroup>
+  <PropertyGroup>
+    <DisableTransitiveProjectReferences>true</DisableTransitiveProjectReferences>
+  </PropertyGroup>
 
   <ItemGroup>
     <Content Include="appsettings.json">
@@ -19,6 +19,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ExternalLibrary\ExternalLibrary.csproj" />
   </ItemGroup>
 
 </Project>
