--- a/ConflictingContentFilesTest/ConflictingContentFilesTest.csproj
+++ b/ConflictingContentFilesTest/ConflictingContentFilesTest.csproj
@@ -7,9 +7,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <DisableTransitiveProjectReferences>true</DisableTransitiveProjectReferences>
-  </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExternalLibrary\ExternalLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
 
   <ItemGroup>
     <Content Include="appsettings.json">
@@ -19,10 +23,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ExternalLibrary\ExternalLibrary.csproj" />
   </ItemGroup>
 
 </Project>
